update demo for debian 8.8

--- a/apache2.conf
+++ b/apache2.conf
@@ -1,4 +1,3 @@
-LockFile ${APACHE_LOCK_DIR}/accept.lock
 PidFile ${APACHE_PID_FILE}
 Timeout 300
 KeepAlive Off
@@ -41,8 +40,8 @@ DefaultType None
 HostnameLookups Off
 ErrorLog ${APACHE_LOG_DIR}/error.log
 LogLevel warn
-Include mods-enabled/*.load
-Include mods-enabled/*.conf
+Include /etc/apache2/mods-enabled/*.load
+Include /etc/apache2/mods-enabled/*.conf
 Include ports.conf
 LogFormat "%v:%p %h %l %u %t \"%r\" %>s %O \"%{Referer}i\" \"%{User-Agent}i\"" vhost_combined
 LogFormat "%h %l %u %t \"%r\" %>s %O \"%{Referer}i\" \"%{User-Agent}i\"" combined
@@ -59,5 +58,5 @@ LogFormat "%{User-agent}i" agent
         Header set Expires "Wed, 11 Jan 2010 05:00:00 GMT"
     </ifModule>
 </FilesMatch>
-Include conf.d/
+Include conf-enabled/
 Include sites-enabled/
