disable keep-alive, update readme

--- a/apache2.conf
+++ b/apache2.conf
@@ -1,9 +1,9 @@
 DefaultRuntimeDir ${APACHE_RUN_DIR}
 PidFile ${APACHE_PID_FILE}
 Timeout 300
-KeepAlive On
-MaxKeepAliveRequests 100
-KeepAliveTimeout 5
+KeepAlive Off
+MaxKeepAliveRequests 1
+KeepAliveTimeout 1
 User ${APACHE_RUN_USER}
 Group ${APACHE_RUN_GROUP}
 HostnameLookups Off
